@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use Test::More;
-use Test::Exception;
+use Test::Fatal;
 
 {
     package Foo;
@@ -46,26 +46,26 @@ my $foo = Foo->new;
 
 isa_ok($foo, 'Foo');
 
-lives_and(sub { is $foo->morning('Resi'), 'Good morning Resi!' }, 'positional str arg');
-lives_and(sub { is $foo->hello(who => 'world', age => 42), 'Hello world, I am 42 years old!' }, 'two named args');
-lives_and(sub { is $foo->greet('Resi', excited => 1), 'GREETINGS Resi!' }, 'positional and named args (with named default)');
-throws_ok(sub { $foo->hello(who => 'world', age => 'fortytwo') }, qr/Validation failed/, 'Str, Str sent to Str, Int');
-throws_ok(sub { $foo->hello(who => 'world', age => -23) }, qr/Validation failed/, 'Int violates where');
-throws_ok(sub { $foo->morning }, qr/Validation failed/, 'no required (positional) arg passed');
-throws_ok(sub { $foo->greet }, qr/Validation failed/, 'no required (positional) arg passed');
+is(exception { is $foo->morning('Resi'), 'Good morning Resi!' }, undef, 'positional str arg');
+is(exception { is $foo->hello(who => 'world', age => 42), 'Hello world, I am 42 years old!' }, undef, 'two named args');
+is(exception { is $foo->greet('Resi', excited => 1), 'GREETINGS Resi!' }, undef, 'positional and named args (with named default)');
+like(exception { $foo->hello(who => 'world', age => 'fortytwo') }, qr/Validation failed/, 'Str, Str sent to Str, Int');
+like(exception { $foo->hello(who => 'world', age => -23) }, qr/Validation failed/, 'Int violates where');
+like(exception { $foo->morning }, qr/Validation failed/, 'no required (positional) arg passed');
+like(exception { $foo->greet }, qr/Validation failed/, 'no required (positional) arg passed');
 
 my $someclass = SomeClass->new;
 
 isa_ok($someclass, 'SomeClass');
 
-lives_and(sub { is $someclass->foo, 'apan:42' }, '$someclass->foo');
-lives_and(sub { is $someclass->foo('quux'), 'quux:42' }, '$someclass->foo("quux")');
-lives_and(sub { is $someclass->foo('quux', baz => 12), 'quux:12' }, '$someclass->foo("quux", baz => 12)');
+is(exception { is $someclass->foo, 'apan:42' }, undef, '$someclass->foo');
+is(exception { is $someclass->foo('quux'), 'quux:42' }, undef, '$someclass->foo("quux")');
+is(exception { is $someclass->foo('quux', baz => 12), 'quux:12' }, undef, '$someclass->foo("quux", baz => 12)');
 
-throws_ok(sub { $someclass->foo(baz => 12) }, qr/Expected named arguments/, '$someclass->foo(baz => 12)');
-throws_ok(sub { $someclass->foo(baz => 12, 'quux') }, qr/Validation failed/, '$someclass->foo(baz => 12, "quux")');
-throws_ok(sub { $someclass->foo(baz => 41) }, qr/Expected named arguments/, '$someclass->foo(baz => 41)');
-throws_ok(sub { $someclass->foo(baz => 44) }, qr/Expected named arguments/, '$someclass->foo(baz => 12)');
+like(exception { $someclass->foo(baz => 12) }, qr/Expected named arguments/, '$someclass->foo(baz => 12)');
+like(exception { $someclass->foo(baz => 12, 'quux') }, qr/Validation failed/, '$someclass->foo(baz => 12, "quux")');
+like(exception { $someclass->foo(baz => 41) }, qr/Expected named arguments/, '$someclass->foo(baz => 41)');
+like(exception { $someclass->foo(baz => 44) }, qr/Expected named arguments/, '$someclass->foo(baz => 12)');
 
 
 done_testing;
