@@ -1,5 +1,9 @@
 Version history for MooseX::Method::Signatures
 
+{{NEXT}}
+  * The test suite now uses Test::Fatal instead of Test::Exception (Karen
+    Etheridge).
+
 0.36  Tue, 31 Aug 2010 23:36:19 +0200
   * Avoid deprecation warnings from new Moose version by depending on
     MooseX::LazyRequire 0.06 (Jeremy Carman).
